--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -107,7 +107,7 @@
               <object class="GtkButton" id="button3">
                 <property name="label" translatable="yes">Cancel</property>
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
               </object>
               <packing>
@@ -120,7 +120,7 @@
               <object class="GtkButton" id="button4">
                 <property name="label" translatable="yes">Apply</property>
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can_focus">True</property>
                 <property name="can_default">True</property>
                 <property name="has_default">True</property>
                 <property name="receives_default">True</property>
@@ -219,7 +219,7 @@
                             <child>
                               <object class="GtkButton" id="button_IconName">
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
+                                <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
                                 <property name="image">image14</property>
                               </object>
@@ -262,7 +262,7 @@
                             <child>
                               <object class="GtkButton" id="button_ImageFile">
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
+                                <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
                                 <property name="image">image15</property>
                               </object>
@@ -2169,7 +2169,7 @@ Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, O
               <object class="GtkButton" id="icon_selection_cancel">
                 <property name="label" translatable="yes">Cancel</property>
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
               </object>
               <packing>
@@ -2182,7 +2182,9 @@ Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, O
               <object class="GtkButton" id="icon_selection_apply">
                 <property name="label" translatable="yes">Apply</property>
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can_focus">True</property>
+                <property name="can_default">True</property>
+                <property name="has_default">True</property>
                 <property name="receives_default">True</property>
               </object>
               <packing>
@@ -2255,7 +2257,8 @@ Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, O
                 <child>
                   <object class="GtkTreeView" id="icon_selection_treeview">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can_focus">True</property>
+                    <property name="has_focus">True</property>
                     <property name="model">liststore6</property>
                     <property name="headers_visible">False</property>
                     <property name="headers_clickable">False</property>
