--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -475,6 +475,7 @@
     <property name="height_request">600</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">MenuLibre</property>
+    <property name="window_position">center</property>
     <property name="icon_name">menulibre</property>
     <child>
       <object class="GtkBox" id="box1">
